# jcfbot

./: Cargo.toml
migrations/: 20251116030546_create_table.sql  20251122193008_create_boilboard.sql
src/: commands.rs  consts.rs  main.rs
src/commands/: mod.rs  voteboil.rs
src/commands/tempus/: link.rs  mod.rs  ranks.rs  times.rs
