[package]
name = "jcfbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
hhmmss = "0.1"
magick_rust = "2.0"
poise = "0.6"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "system-proxy"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serenity = { version = "0.12", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "sqlite"] }
tokio = { version = "1.48", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"


